2004-05-04  Per Bothner  <per@bothner.com>

	* num-test.scm:  Add 5 new Comparable/CollectionsLsort tests.

2004-04-22  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New testcase, simplified from psynjtax.pp
	(pre-processed version of portable syntax case implementation).

2004-02-21  Per Bothner  <per@bothner.com>

	* num-tests.scm:  Add tests of Comparable numbers
	using java.util.Collections.sort.

2004-02-16  Per Bothner  <per@bothner.com>

	* mac-test.scm:  Add a testcase by Al Petrovsky.

2004-02-15  Per Bothner  <per@bothner.com>

	* classes1.scm:  Add access: properties and test them.

2003-12-25  Per Bothner  <per@bothner.com>

	* module1.scm (namespace-syntax-test):  Specific timezone UTC so
	result is predictable.
	(obj-test.scm):  Update result from namespace-syntax-test.

2003-12-20  Per Bothner  <per@bothner.com>

	* obj-test.scm, classes1.scm:  Test new field initialization features.

2003-11-10  Per Bothner  <per@bothner.com>

	* testing.scm (report-fail):  Only use string-append if
	fail-expected is a string.

2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm:  Added string-append/shared tests

2003-11-05  Per Bothner  <per@bothner.com>

	* module3.scm, obj-test.scm:  Test define-variable syntax form.
	(dvar-test-1):  Add with-compile-options form.

2003-10-19  Per Bothner  <per@bothner.com>

	* num-test.scm:  New test from Sven.Hartrumpf@fernuni-hagen.de
	(10-17 "airth. expression crashes Kawa") plus 2 derived tests.

2003-10-08  Per Bothner  <per@bothner.com>

	Based on Savannah bug #5651 from Chris Dean <Chris.Dean@sokitomi.com>.
	* module3.scm (iarr-set):  New function.
	* obj-test.scm:  New test for primitive-array macros.

2003-09-11  Per Bothner  <per@bothner.com>

	* testing.scm (test):  Catch exception.
	* misc-test.scm:  New generic procedure tests. One is expected to fail.

2003-09-08  Per Bothner  <per@bothner.com>

	Based on Savannah bug #5113 from Chris Dean <Chris.Dean@sokitomi.com>.