@@ -77,7 +77,10 @@ scribble.class: $(srcdir)/scribble.scm
 module1.class: $(srcdir)/module1.scm
 	$(KAWA) -C $(srcdir)/module1.scm
 
-module2.class: $(srcdir)/module2.scm module1.class
+module1a.class: $(srcdir)/module1a.scm
+	$(KAWA) -C $(srcdir)/module1a.scm
+
+module2.class: $(srcdir)/module2.scm module1.class module1a.class
 	$(KAWA) -C $(srcdir)/module2.scm
 
 module3.class: $(srcdir)/module3.scm module1.class
@@ -155,7 +158,7 @@ EXTRA_DIST = testing.scm test.scm num-test.scm mac-test.scm mac1.scm \
   classes1.scm classes2.scm SimpleB.java obj-test.scm arr-test.scm \
   MyFunc.java MyModule.java \
   misc-test.scm polytype.scm formatst.scm scribble.scm \
-  module1.scm module2.scm module3.scm \
+  module1.scm module1a.scm module2.scm module3.scm \
   HelloCgiK.krl HelloCgiS.scm HelloCgiX.xql \
   ppfile.out scribble.html.in \
   MySAXApp.java MySAXApp.expected \
